# obsidian-task-manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  api_examples.md  demo_flush_vs_commit.py  docker-compose.yml  examples_repositories.py  examples_services.py  init_db.py  postman_collection.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: .env.example  sync_config.yaml
docs/adr/: 0001-three-layer-architecture.md  0002-repository-pattern-with-generics.md  0003-service-layer-for-business-logic.md  0004-dependency-injection-pattern.md  0005-fastapi-framework.md  0006-pydantic-schemas-dto-pattern.md  0007-transaction-management-flush-vs-commit.md  0008-sqlalchemy-2-0-async-orm.md  0009-eager-loading-strategy.md  0010-validation-in-service-layer.md  0011-database-support-postgresql-sqlite.md  0012-async-architecture.md  0013-tag-normalization-for-obsidian.md  0014-two-level-task-hierarchy-limit.md  0015-explicit-junction-table-for-many-to-many.md  0016-timestamp-mixin-for-audit.md  0017-frontend-framework-selection.md  0018-obsidian-sync-integration.md  README.md
docs/weeks/: week-06-summary.md
frontend/: .env.example  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  index.ts  projects.ts  sync.ts  tags.ts  tasks.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: index.ts  useProjects.ts  useSync.ts  useTasks.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  Projects.tsx  Settings.tsx  Sync.tsx  Tasks.tsx
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 4dc5e7d30bd7_add_archived_at_field_to_projects.py  6406458610a7_initial_migration_create_all_tables.py  8078b0cc8041_add_sync_logs_and_sync_conflicts_tables.py
scripts/: check.sh  seed_data.py
src/: main.py
src/api/: __init__.py  dependencies.py  errors.py  middleware.py  projects.py  schemas.py  sync.py  tags.py  tasks.py
src/core/: __init__.py  config.py  database.py  logging.py
src/integrations/obsidian/: __init__.py  file_scanner.py  parser.py  project_resolver.py
src/models/: __init__.py  base.py  project.py  sync_conflict.py  sync_log.py  tag.py  task.py  task_comment.py  task_tag.py
src/repositories/: __init__.py  base.py  project.py  sync.py  tag.py  task.py  task_comment.py
src/services/: __init__.py  project.py  sync.py  tag.py  task.py
tests/: conftest.py  test_api.py  test_api_sync.py  test_integrations_obsidian_file_scanner.py  test_integrations_obsidian_parser.py  test_integrations_obsidian_project_resolver.py  test_models_sync.py  test_repositories.py  test_repositories_sync.py  test_services.py  test_services_sync.py
